feat(15): [WIP] used generated models + get rid of representation layer + fix all testsc
