# api/openapi/src/models/config.rs
@@ -1,33 +1,0 @@
-/*
- * Gates API
- *
- * OpenAPI specification for the Gates API
- *
- * The version of the OpenAPI document: 1.12.0
- * 
- * Generated by: https://openapi-generator.tech
- */
-
-use crate::models;
-
-/// Config : Contains global configuration.
-#[derive(Clone, Default, Debug, PartialEq, Serialize, Deserialize)]
-pub struct Config {
-    /// The global current system time.
-    #[serde(rename = "system_time")]
-    pub system_time: String,
-    /// The active business hours of each day of the week from start to end
-    #[serde(rename = "active_hours_per_week")]
-    pub active_hours_per_week: serde_json::Value,
-}
-
-impl Config {
-    /// Contains global configuration.
-    pub fn new(system_time: String, active_hours_per_week: serde_json::Value) -> Config {
-        Config {
-            system_time,
-            active_hours_per_week,
-        }
-    }
-}
-
