# api/openapi/src/models/mod.rs
@@ -1,30 +1,0 @@
-pub mod active_hours;
-pub use self::active_hours::ActiveHours;
-pub mod active_hours_per_week;
-pub use self::active_hours_per_week::ActiveHoursPerWeek;
-pub mod add_comment_request;
-pub use self::add_comment_request::AddCommentRequest;
-pub mod api_info;
-pub use self::api_info::ApiInfo;
-pub mod comment;
-pub use self::comment::Comment;
-pub mod config;
-pub use self::config::Config;
-pub mod create_gate_request;
-pub use self::create_gate_request::CreateGateRequest;
-pub mod environment;
-pub use self::environment::Environment;
-pub mod gate;
-pub use self::gate::Gate;
-pub mod gate_state;
-pub use self::gate_state::GateState;
-pub mod gate_state_rep;
-pub use self::gate_state_rep::GateStateRep;
-pub mod group;
-pub use self::group::Group;
-pub mod service;
-pub use self::service::Service;
-pub mod update_display_order_request;
-pub use self::update_display_order_request::UpdateDisplayOrderRequest;
-pub mod update_gate_state_request;
-pub use self::update_gate_state_request::UpdateGateStateRequest;
